--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>
         Em rất yêu thích môn Lịch Sử vì nó giúp em mở mang kiến thức, đồng thời kết nối với 
         các thế hệ trước. Em hy vọng sẽ tiếp tục khám phá và tìm hiểu thêm về các sự kiện 
-        lịch sử để hiểu rõ hơn về con đường mà nhân loại đã trải qua. 💕
+        lịch sử để hiểu rõ hơn về con đường mà nhân loại đã trải qua. 💕(@vld)
     </p>
 </body>
 </html>
